Added Put function

--- a/WPF to WEB API to WCF/WPFMain/MainWindow.xaml
+++ b/WPF to WEB API to WCF/WPFMain/MainWindow.xaml
@@ -45,7 +45,7 @@
 
             <StackPanel  Margin="2" >
                 <Button Grid.Column="0" Grid.Row="0"
-                Name="Update" Content="Update list" Margin="5" Width="150" Height="25" Click="Update_Click"  ></Button>
+                Name="Update" Content="Update Person" Margin="5" Width="150" Height="25" Click="Update_Click"  ></Button>
             </StackPanel>
 
         </StackPanel>
