--- a/WPF to WEB API to WCF/WPFMain/MainWindow.xaml
+++ b/WPF to WEB API to WCF/WPFMain/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="WPFMain.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Post Request" Height="350" Width="525">
+        Title="Post-Put Request" Height="350" Width="525">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
